--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="jumbotron" id="welcome">
       <h1>Welcome to SmartForm!</h1>
       <p>Front-end Technology Survey</p>
-      <p><button class="btn btn-primary btn-lg">Start Survey</button></p>
+      <p><button id="startBtn" class="btn btn-primary btn-lg">Start Survey</button></p>
     </div>
     <!-- Welcome END -->
     <!-- Question 1 -->
@@ -27,7 +27,7 @@
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
         </div>
-        <button class="btn btn-success">Next</button>
+        <button id="q1Next" disabled class="btn btn-success">Next</button>
       </div>
     </div>
     <!-- Question 1 END -->
