--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <!-- Welcome END -->
     <!-- Question 1 -->
-    <div class="row jumbotron" id="q1">
+    <div class="row jumbotron question" id="q1">
       <div class="col-sm-8">
         <div class="form-group">
           <label for="name">Name</label>
@@ -96,7 +96,7 @@
     </div>
     <!-- Question 2a END -->
     <!-- Question 2b -->
-    <div class="row jumbotron" id="q2b">
+    <div class="row jumbotron question" id="q2b">
       <div class="col-sm-6">
         <p>What do you <strong>like</strong> about CSS?</p>
         <div class="checkbox">
@@ -145,7 +145,7 @@
     </div>
     <!-- Question 2b END -->
     <!-- Question 2c -->
-    <div class="row jumbotron" id="q2c">
+    <div class="row jumbotron question" id="q2c">
       <div class="col-sm-6">
         <p>What do you <strong>like</strong> about JavaScript?</p>
         <div class="checkbox">
